--- a/agent/nicegui_agent/template/Dockerfile
+++ b/agent/nicegui_agent/template/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.12-slim
 
 # Environment variables
 ENV NICEGUI_STORAGE_SECRET=${NICEGUI_STORAGE_SECRET:-STORAGE_SECRET}
-ENV NICEGUI_PORT=${NICEGUI_PORT:-8080}
+ENV NICEGUI_PORT=${NICEGUI_PORT:-8000}
 
 # Install uv and system dependencies
 RUN pip install uv && \
@@ -15,10 +15,10 @@ WORKDIR /app
 COPY . .
 
 # Install dependencies with uv
-RUN uv sync
+RUN uv sync --no-dev
 
 # Expose port
-EXPOSE ${NICEGUI_PORT}
+EXPOSE ${NICEGUI_PORT:-8000}
 
 # Run the application with uv
-CMD ["uv", "run", "python", "main.py"]
+CMD ["uv", "run", "python", "main.py", "--no-dev"]
