update cache and friends

--- a/agent/nicegui_agent/template/pytest.ini
+++ b/agent/nicegui_agent/template/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 asyncio_mode = auto
-addopts = --tb=line --disable-warnings --no-header -x -q -m "not sqlmodel"
+addopts = --tb=line --disable-warnings --no-header -q -m "not sqlmodel"
 log_cli = false
 log_level = CRITICAL
 filterwarnings = ignore
