--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -10,7 +10,6 @@ dependencies = [
     "fastapi>=0.115.12",
     "fire>=0.7.0",
     "google-genai>=1.18.0",
-
     "jinja2>=3.1.6",
     "sentry-sdk>=2.25.1",
     "ujson>=5.10.0",
@@ -21,6 +20,8 @@ dependencies = [
     "tenacity>=9.1.2",
     "brotli-asgi>=1.4.0",
     "python-dotenv>=1.1.0",
+    "polars>=1.31.0",
+    "databricks-sdk>=0.58.0",
 ]
 
 [build-system]
