--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,6 +1,9 @@
-FROM alpine:3.21.3 AS prod
+FROM python:3.12-slim AS prod
 
-RUN apk add --update --no-cache curl python3 docker
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    docker.io \
+    && rm -rf /var/lib/apt/lists/*
 COPY --from=ghcr.io/astral-sh/uv:0.6.14 /uv /uvx /bin/
 RUN curl -fsSL https://dl.dagger.io/dagger/install.sh | BIN_DIR=/usr/local/bin sh
 
