--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "brotli-asgi>=1.4.0",
     "python-dotenv>=1.1.0",
     "polars>=1.31.0",
+    "openai>=1.68.2",
 ]
 
 [build-system]
@@ -79,6 +80,4 @@ dev = [
     "pyright>=1.1.400",
     "streamlit>=1.45.1",
 ]
-google = ["google-genai>=1.7.0"]
-openai = ["openai>=1.68.2"]
 ollama = ["ollama>=0.5.1"]
