--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "fullstack-agent"
 version = "0.1.0"
-description = "Opinionated Tanstack codegen agent."
+description = "Opinionated prompt-to-app AI agent."
 requires-python = ">=3.12"
 dependencies = [
     "anthropic[bedrock]>=0.49.0",
@@ -23,6 +23,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "polars>=1.31.0",
     "openai>=1.68.2",
+    "ollama>=0.5.1",
 ]
 
 [build-system]
@@ -80,4 +81,3 @@ dev = [
     "pyright>=1.1.400",
     "streamlit>=1.45.1",
 ]
-ollama = ["ollama>=0.5.1"]
