--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,10 +68,10 @@ jobs:
 
       - name: Run unit tests
         working-directory: ./dabgent
-        run: cargo test --lib --all
+        run: cargo test --lib --all -- --nocapture
         continue-on-error: true
 
       - name: Run integration tests (excluding e2e)
         working-directory: ./dabgent
-        run: cargo test --all --test '*' -- --skip e2e_generation
+        run: cargo test --all --test '*' -- --skip e2e_generation --nocapture
         continue-on-error: true
