--- a/dabgent/dabgent_mcp/Cargo.toml
+++ b/dabgent/dabgent_mcp/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/main.rs"
 name = "client"
 path = "examples/client.rs"
 
+[[example]]
+name = "validate_template"
+path = "examples/validate_template.rs"
+
 [dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
 serde = { version = "1", features = ["derive"] }
@@ -22,10 +26,12 @@ thiserror = "2.0"
 rmcp = { version = "0.6", features = ["server", "client", "transport-io", "transport-child-process"] }
 # update rmcp when rmcp-in-process-transport will support newer rmcp version
 schemars = "1"
+dagger-sdk = "0.18.16"
 
 # internal dependencies
 dabgent_integrations = { path = "../dabgent_integrations" }
 dabgent_agent = { path = "../dabgent_agent" }
+dabgent_sandbox = { path = "../dabgent_sandbox" }
 
 [dev-dependencies]
 rmcp-in-process-transport = "0.2.0"
