--- a/dataapps/template_trpc/Dockerfile
+++ b/dataapps/template_trpc/Dockerfile
@@ -1,5 +1,5 @@
 # Multi-stage Dockerfile for tRPC template
-FROM node:20-alpine AS builder
+FROM node:20-alpine3.22 AS builder
 
 WORKDIR /app
 
@@ -12,13 +12,12 @@ COPY server/package*.json ./server/
 # - Agent may add new dependencies to package.json during development
 # - package-lock.json may be missing or out of sync
 # - npm install will generate/update the lock file
-# - Using --legacy-peer-deps to allow peer dependency mismatches (agent may add incompatible packages)
 # The generated lock file is then copied to production stage for reproducible builds
 RUN --mount=type=cache,target=/root/.npm \
-    cd client && npm install --legacy-peer-deps
+    cd client && npm install
 
 RUN --mount=type=cache,target=/root/.npm \
-    cd server && npm install --legacy-peer-deps
+    cd server && npm install
 
 # Copy server source (needed for client build due to tRPC types)
 COPY server/ ./server/
@@ -28,7 +27,7 @@ COPY client/ ./client/
 RUN cd client && npm run build
 
 # Stage 2: Production image
-FROM node:20-alpine
+FROM node:20-alpine3.22
 
 # Install curl for healthcheck
 RUN apk add --no-cache curl
@@ -39,7 +38,7 @@ WORKDIR /app
 # This ensures reproducible production builds with exact dependency versions
 COPY --from=builder /app/server/package*.json ./server/
 RUN --mount=type=cache,target=/root/.npm \
-    cd server && npm install --omit=dev --legacy-peer-deps
+    cd server && npm ci --omit=dev
 
 # Copy server source
 COPY server/ ./server/
