--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -66,3 +66,38 @@ jobs:
         working-directory: ./dabgent
         # Run with single thread due to Dagger connection race conditions
         run: cargo nextest run --tests --workspace --test-threads=1
+
+  build-dabgent-mcp:
+    name: Build dabgent_mcp (${{ matrix.platform }})
+    runs-on: ${{ matrix.runner }}
+    timeout-minutes: 20
+    if: github.ref == 'refs/heads/main' || contains(github.event.head_commit.message, 'release')
+    strategy:
+      matrix:
+        include:
+          - platform: linux-x86_64
+            runner: ubuntu-latest
+          - platform: macos-arm64
+            runner: macos-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache cargo dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: dabgent
+
+      - name: Build release binary
+        working-directory: ./dabgent
+        run: cargo build --release -p dabgent_mcp
+
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dabgent-mcp-${{ matrix.platform }}
+          path: dabgent/target/release/dabgent-mcp
+          retention-days: 30
