--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -122,10 +122,9 @@ jobs:
       - name: Build release binary
         run: |
           cd dabgent
+          ${{ matrix.platform == 'macos-arm64' && 'export CARGO_BUILD_JOBS=2' || '' }}
           cargo build --release -p dabgent_mcp
           ls -la target/release/
-        env:
-          CARGO_BUILD_JOBS: ${{ matrix.platform == 'macos-arm64' && '2' || '' }}
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
