--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -122,9 +122,11 @@ jobs:
       - name: Build release binary
         run: |
           cd dabgent
-          ${{ matrix.platform == 'macos-arm64' && 'export CARGO_BUILD_JOBS=2' || '' }}
           cargo build --release -p dabgent_mcp
           ls -la target/release/
+        env:
+          CARGO_PROFILE_RELEASE_LTO: ${{ matrix.platform == 'macos-arm64' && 'off' || 'thin' }}
+          CARGO_PROFILE_RELEASE_CODEGEN_UNITS: ${{ matrix.platform == 'macos-arm64' && '16' || '1' }}
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
