--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -127,6 +127,7 @@ jobs:
         env:
           CARGO_PROFILE_RELEASE_LTO: ${{ matrix.platform == 'macos-arm64' && 'off' || 'thin' }}
           CARGO_PROFILE_RELEASE_CODEGEN_UNITS: ${{ matrix.platform == 'macos-arm64' && '16' || '1' }}
+          CARGO_PROFILE_RELEASE_OPT_LEVEL: ${{ matrix.platform == 'macos-arm64' && '2' || '3' }}
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
