--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Build release binary
         run: |
           cd dabgent
-          ${{ matrix.platform == 'macos-arm64' && 'cargo build --release -p dabgent_mcp -v -j 1' || 'cargo build --release -p dabgent_mcp' }}
+          ${{ matrix.platform == 'macos-arm64' && 'cargo build --release -p dabgent_mcp --no-default-features -v -j 1' || 'cargo build --release -p dabgent_mcp' }}
           ls -la target/release/
         env:
           CARGO_PROFILE_RELEASE_LTO: ${{ matrix.platform == 'macos-arm64' && 'off' || 'thin' }}
