--- a/dabgent/dabgent_agent/Cargo.toml
+++ b/dabgent/dabgent_agent/Cargo.toml
@@ -16,7 +16,7 @@ thiserror = "2.0"
 rig-core = "0.19.0"
 dabgent_mq = { path = "../dabgent_mq" }
 dabgent_sandbox = { path = "../dabgent_sandbox" }
-dabgent_integrations = { path = "../dabgent_integrations" }
+dabgent_integrations = { path = "../dabgent_integrations", features = ["google-sheets"] }
 clap = { version = "4.5.47", features = ["derive"] }
 tokio-stream = "0.1"
 tempfile = "3.0"
