--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -126,7 +126,7 @@ jobs:
           ls -la target/release/
         env:
           CARGO_PROFILE_RELEASE_LTO: ${{ matrix.platform == 'macos-arm64' && 'off' || 'thin' }}
-          CARGO_PROFILE_RELEASE_CODEGEN_UNITS: ${{ matrix.platform == 'macos-arm64' && '16' || '1' }}
+          CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
           CARGO_PROFILE_RELEASE_OPT_LEVEL: ${{ matrix.platform == 'macos-arm64' && '0' || '3' }}
 
       - name: Upload binary artifact
