--- a/dabgent/dabgent_integrations/Cargo.toml
+++ b/dabgent/dabgent_integrations/Cargo.toml
@@ -3,17 +3,13 @@ name = "dabgent_integrations"
 version = "0.1.0"
 edition = "2024"
 
-[features]
-default = []
-google-sheets = ["dep:google-sheets4", "dep:yup-oauth2", "dep:hyper-util"]
-
 [dependencies]
 anyhow = "1.0"
 base64 = "0.22"
 clap = { version = "4.5", features = ["derive"] }
 env_logger = "0.11"
-google-sheets4 = { version = "6.0", optional = true }
-hyper-util = { version = "0.1", features = ["client-legacy"], optional = true }
+google-sheets4 = "6.0"
+hyper-util = { version = "0.1", features = ["client-legacy"] }
 log = "0.4"
 regex = "1.0"
 reqwest = { version = "0.12", features = ["json"] }
@@ -22,4 +18,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
 urlencoding = "2.1"
-yup-oauth2 = { version = "11.0", optional = true }
+yup-oauth2 = "11.0"
