--- a/dabgent/dabgent_cli/Cargo.toml
+++ b/dabgent/dabgent_cli/Cargo.toml
@@ -28,4 +28,4 @@ dotenvy = "0.15"
 futures = "0.3"
 
 [dev-dependencies]
-dabgent_integrations = { path = "../dabgent_integrations", features = ["google-sheets"] }
+dabgent_integrations = { path = "../dabgent_integrations" }
