--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -122,16 +122,16 @@ jobs:
       - name: Build release binary
         run: |
           cd dabgent
-          ${{ matrix.platform == 'macos-arm64' && 'cargo build -p dabgent_mcp' || 'cargo build --release -p dabgent_mcp' }}
-          ls -la target/${{ matrix.platform == 'macos-arm64' && 'debug' || 'release' }}/
+          cargo build --release -p dabgent_mcp
+          ls -la target/release/
         env:
           CARGO_PROFILE_RELEASE_LTO: ${{ matrix.platform == 'macos-arm64' && 'off' || 'thin' }}
           CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
-          CARGO_PROFILE_RELEASE_OPT_LEVEL: ${{ matrix.platform == 'macos-arm64' && '0' || '3' }}
+          CARGO_PROFILE_RELEASE_OPT_LEVEL: 3
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
         with:
           name: dabgent-mcp-${{ matrix.platform }}
-          path: dabgent/target/${{ matrix.platform == 'macos-arm64' && 'debug' || 'release' }}/dabgent_mcp
+          path: dabgent/target/release/dabgent_mcp
           retention-days: 30
