fix: add contents write permission to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ on:
         type: string
         default: ""
 
+permissions:
+  contents: write
+  actions: read
+
 jobs:
   validate-and-tag:
     name: Validate and Create Tag
