--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate-and-tag
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - name: Download Linux artifact
         uses: actions/download-artifact@v4
         with:
@@ -141,6 +146,19 @@ jobs:
             --target "${{ inputs.commit_sha }}" \
             --verify-tag \
             release/*
+
+      - name: Update latest tag
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Delete existing latest tag if it exists
+          git tag -d latest 2>/dev/null || true
+          git push origin :refs/tags/latest 2>/dev/null || true
+
+          # Create new latest tag pointing to the release commit
+          git tag latest "${{ inputs.commit_sha }}"
+          git push origin latest
 
       - name: Output release URL
         run: |
