--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -74,6 +74,9 @@ jobs:
     outputs:
       should_build: ${{ steps.check.outputs.should_build }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Check if release build needed
         id: check
         env:
