Fix critical trajectory analysis issues
- Make executeQuery schema parameter required with clear JSDoc
- Add mapRows helper to eliminate manual casting boilerplate
- Add file tree to scaffold output with smart directory collapsing
- Fail validation if no test files found
- Update CLAUDE.md with executeQuery clarification and examples
- Add tRPC caller test pattern (no HTTP server needed)

--- a/edda/edda_templates/template_trpc/server/package.json
+++ b/edda/edda_templates/template_trpc/server/package.json
@@ -9,7 +9,7 @@
     "db:push": "drizzle-kit push --force",
     "db:push-ci": "yes | npm run db:push",
     "lint": "eslint --cache src/index.ts",
-    "test": "node --test --import tsx src/*.test.ts"
+    "test": "sh -c 'ls src/*.test.ts src/*.test.tsx 2>/dev/null | grep -q . || (echo \"Error: No test files found (*.test.ts or *.test.tsx)\" && exit 1); node --test --import tsx src/*.test.ts'"
   },
   "dependencies": {
     "@databricks/sql": "^1.12.0",
