--- a/.gitignore
+++ b/.gitignore
@@ -187,5 +187,4 @@ klaudbiusz/archive/**
 klaudbiusz/results_*/**
 klaudbiusz/results/**
 klaudbiusz/results_latest
-klaudbiusz/app copy/**
-klaudbiusz/app-tmp/**
+klaudbiusz/app*/**
